<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/background_app"
    android:padding="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sua_tarefa"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"/>

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/negocio"
            android:checked="true"
            android:textColor="@color/white"
            android:buttonTint="@color/business_category"/>

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/persoal"
            android:textColor="@color/white"
            android:buttonTint="@color/personal_category"/>

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outros"
            android:textColor="@color/white"
            android:buttonTint="@color/pther_category"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criar_tarefa"
        android:backgroundTint="@color/accent"/>


</androidx.appcompat.widget.LinearLayoutCompat>